Fix page jumping

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -40,7 +40,7 @@ body {
     padding: 20px 40px;
     border-radius: 5px;
     background: transparent;
-    min-height: 350px;
+    min-height: 370px;
 
     &:after {
         content: "";
